W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - become contributed updated

--- a/app/views/pages/become_contributor.html.erb
+++ b/app/views/pages/become_contributor.html.erb
@@ -18,6 +18,35 @@
       <h1 class="title blackgrayfont grid-100"><%= t('become_contributor_title') %></h1>
       <div class="">
         <div class="grid-100">
+<h3>Invitation to OD4D Platform</h3>
+
+<p>There are several ways to join the global effort to publish linked data and to join the initiative to build up the semantic web. The project Open Data Platform Development - OD4D is a worldwide forum for cooperation among the various actors in this ecosystem.</p>
+        
+<p><strong>Aims</strong></p>
+
+<p>The platform serves as the link between the regional initiatives of linked data in Latin America, Africa, Asia and the Caribbean. She works as a virtual hub for OD4D Network, enabling access in English, Portuguese and Spanish in a simple, semantic and scalable environment. It was designed to be a reference in linked data systems, to enable learning on open data technologies, community exchange information and the production of semantic content. Its main objectives are:</p>
+
+<ul>
+  <li>Gathering data on the web initiatives from both partner organizations and individuals, showing in detail the step by step of structuring linked data use cases;</li>
+  <li>Promoting the integration and dissemination of knowledge about linked data using native languages​​;</li>
+  <li>Promoting standards and specific vocabulary;</li>
+  <li>Being a reference of best practices for publishing and reuse of linked data;</li>
+  <li>Being, itself, a case of linked data by using W3C standards.</li>
+</ul>
+
+<p>The end result is an inspiring platform for new experiments to interconnect innovative networks and to feed the linked data value chain.</p>
+<p>The platform is a space for managers, entrepreneurs, developers, researchers and enthusiasts. Your success depends on the participation of people like you.</p>
+<p>In it, for example, managers of public and government policies can study and discuss alternative strategies for the development of technical skills in government agencies and regional observatories in order to implement linked data repositories, monitoring and assessment  of public policies.</p>
+<p>Being a virtual hub with different players is made possible intense exchange of information and solutions between experts. Several use cases are being reported with extensive replication capacity. All these cases increase transparency and bring immense benefit to the population.</p>
+<p>Also, private companies can benefit from the exchange of information about cutting-edge technologies. The deployment of the semantic web technologies can help increase the visibility and the value of their products on the network.</p>
+<p>The platform allows research departments of private companies to promote their latest developments in the area of ​​semantic web. Not to mention the possibilities for future partnerships between professionals and institutions cooperating in the development of joint projects.</p>
+<p>Still, researchers in universities have a fertile ground for the spread of papers, case studies and relevant outcomes of their research environment. The social intelligence in the platform provides a living knowledge base about linked data. New experiments and partner initiatives can be driven by the rich academic networking provided by the platform.</p>
+<p>For developers and web designers, the environment drives the access to technical references and best practices in the adoption of open web standards as well as the search for and the publishing of tutorials and technical guides on deployment of semantic web. In addition, the platform bring together a hub of experts.</p>
+<p>Civil society organizations, activists and enthusiasts of free software, open data and open web standards can use the platform promote events on topics of their aspirations. The OD4D platform promotes awareness and advocacy about the importance of open data, as well as being a thriving cradle for the design of new initiatives.</p>
+
+<p><strong>How to become a contributor writing posts</strong></p>
+
+<p>If you wish to become a contributor of content writing posts, please contact us via the email address <a href="mailto:od4d@nic.br">od4d@nic.br</a> to receive a login and password of the CMS and join this initiative!</p>
         </div>
       </div>
     </div>
