W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - capacity building

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
       <ul>
         <li><%= link_to t('menu_5_1'), {controller: "learn", action: "concepts"} %></li>
         <li><%= link_to t('menu_5_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Reference Materials" }%></li>
-        <li><%= link_to t('menu_5_3'), {controller: "learn", action: "capacity_building"} %></li>
+        <li><%= link_to t('menu_5_3'), {controller: "articles", action: "filter", field: "articleSection", term: "Capacity Building" }%></li>
         <li><%= link_to t('menu_5_4'), {controller: "learn", action: "glossary"} %></li>
       </ul>
     </div>
