--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
           <ul class="submenu">
             <li><%= link_to t('menu_5_1'), {controller: "learn", action: "concepts"} %></li>
             <li><%= link_to t('menu_5_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Reference Materials" }%></li>
-            <li><%= link_to t('menu_5_3'), {controller: "learn", action: "capacity_building"} %></li>
+            <li><%= link_to t('menu_5_3'), {controller: "articles", action: "filter", field: "articleSection", term: "Capacity Building" }%></li>
             <li><%= link_to t('menu_5_4'), {controller: "learn", action: "glossary"} %></li>
           </ul>
         </li>
