--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -206,7 +206,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_1') %></h4>
               <p><%= raw t('cases_text_1') %></p>
-              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/casein/posts/8"><%= t('cases_more_link') %></a>
+              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/posts/8"><%= t('cases_more_link') %></a>
             </div>
           </div>
           <div>
@@ -214,7 +214,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_2') %></h4>
               <p><%= t('cases_text_2') %></p>
-              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/casein/posts/33"><%= t('cases_more_link') %></a>
+              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/posts/33"><%= t('cases_more_link') %></a>
             </div>
           </div>
           <div>
@@ -222,7 +222,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_3') %></h4>
               <p><%= t('cases_text_3') %></p>
-              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/casein/posts/36"><%= t('cases_more_link') %></a>
+              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/posts/36"><%= t('cases_more_link') %></a>
             </div>
           </div>
           <div>
@@ -230,7 +230,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_4') %></h4>
               <p><%= t('cases_text_4') %></p>
-              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/casein/posts/1"><%= t('cases_more_link') %></a>
+              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/posts/1"><%= t('cases_more_link') %></a>
             </div>
           </div>
           <div>
@@ -238,7 +238,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_5') %></h4>
               <p><%= t('cases_text_5') %></p>
-              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/casein/posts/30"><%= t('cases_more_link') %></a>
+              <a class="casos-praticos-link" href="/article?uri=http://platform.od4d.org/posts/30"><%= t('cases_more_link') %></a>
             </div>
           </div>
       </div>
