W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - glossary updated

--- a/app/views/learn/glossary.html.erb
+++ b/app/views/learn/glossary.html.erb
@@ -35,6 +35,17 @@
           </p>
 
           <div class="term-glossary">
+            <h3>Open Data</h3>
+            <p>According to the Open Knowledge Foundation, a non-profit organization, “open data is data that can be freely used, reused and redistributed by anyone.” It involves the publication and sharing of information online in open formats, readable by machines, which may be freely and automatically reused by society.</p>
+            <p>Data is regarded as open when there is:</p>
+            <ul>
+              <li>Availability and access: data must be fully available for a reasonable reproduction cost, preferably through downloading; it must also be available in a convenient and changeable format.</li>
+              <li>Reuse and redistribution: data must be provided so as to enable reuse and redistribution, including cross referencing with other datasets.</li>
+              <li>Universal participation: anyone can use, reuse and redistribute it, without discrimination against industry, people or groups (restrictions such as “non-commercial” that prevent commercial use are forbidden, as well as limited use for certain purposes, such as “education only”).</li>
+            </ul>
+          </div>
+
+          <div class="term-glossary">
             <h3>RDFa (Resource Description Framework-in-attributes):</h3>
             <p>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
           </p>
