--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,16 +18,16 @@
       <h3><%= t('menu_5') %></h3>
       <ul>
         <li><%= link_to t('menu_5_1'), {controller: "learn", action: "concepts"} %></li>
-        <li><%= link_to t('menu_5_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Reference Materials" }%></li>
-        <li><%= link_to t('menu_5_3'), {controller: "articles", action: "filter", field: "articleSection", term: "Capacity Building" }%></li>
+        <li><%= link_to t('menu_5_2'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_ref_materials') }%></li>
+        <li><%= link_to t('menu_5_3'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_cap_building') }%></li>
         <li><%= link_to t('menu_5_4'), {controller: "learn", action: "glossary"} %></li>
       </ul>
     </div>
     <div class="grid-15">
       <h3><%= t('menu_6') %></h3>
       <ul>
-        <li><%= link_to t('menu_6_1'), {controller: "articles", action: "filter", field: "articleSection", term: "Projects" }%></li>
-        <li><%= link_to t('menu_6_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Products" }%></li>
+        <li><%= link_to t('menu_6_1'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_projects') }%></li>
+        <li><%= link_to t('menu_6_2'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_products') }%></li>
       </ul>
     </div>
 <!--     <div class="grid-15">
