--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,16 +16,16 @@
           <a class="dropdown" href="#"><%= t('menu_5') %></a>
           <ul class="submenu">
             <li><%= link_to t('menu_5_1'), {controller: "learn", action: "concepts"} %></li>
-            <li><%= link_to t('menu_5_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Reference Materials" }%></li>
-            <li><%= link_to t('menu_5_3'), {controller: "articles", action: "filter", field: "articleSection", term: "Capacity Building" }%></li>
+            <li><%= link_to t('menu_5_2'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_ref_materials') }%></li>
+            <li><%= link_to t('menu_5_3'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_cap_building') }%></li>
             <li><%= link_to t('menu_5_4'), {controller: "learn", action: "glossary"} %></li>
           </ul>
         </li>
         <li>
           <a class="dropdown" href="#"><%= t('menu_6') %></a>
           <ul class="submenu">
-              <li><%= link_to t('menu_6_1'), {controller: "articles", action: "filter", field: "articleSection", term: "Projects" }%></li>
-              <li><%= link_to t('menu_6_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Products" }%></li>
+              <li><%= link_to t('menu_6_1'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_projects') }%></li>
+              <li><%= link_to t('menu_6_2'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_products') }%></li>
           </ul>
         </li>
 <!--         <li>
