fix rolagem lateral.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,20 +10,20 @@
       <h5 class="call-title">
         <%= t('call_title') %>
       </h5>
-      <ul class="push-12-5 mobile-push-10">
-        <li class="grid-25 mobile-grid-80 curioso">
+      <ul class="">
+        <li class="curioso">
           <a href="#">
             <span></span>
             <p><%= t('im_curious') %></p>
           </a>
         </li>
-        <li class="grid-25 mobile-grid-80 dev">
+        <li class="dev">
           <a href="#">
             <span></span>
             <p><%= t('im_a_developer') %></p>
           </a>
         </li>
-        <li class="grid-25 mobile-grid-80 produtor">
+        <li class="produtor">
           <a href="#">
             <span></span>
             <p><%= t('im_a_content_producer') %></p>
@@ -41,7 +41,7 @@
       <%= video_tag(['dadosabertos.webm'], id: 'vidprod', class: 'video', size: '550x300', controls: true)  %>
     </div>
     <div class="pos-call-banner bgdarkgreen pos-curioso">
-      <div class="push-15 grid-90">
+      <div class="push-15 grid-85">
         <div class="grid-40">
           <h3><%= t('liked_it') %></h3>
           <a class="more" href="/about">
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="pos-call-banner pos-dev">
-      <div class="push-15 grid-90">
+      <div class="push-15 grid-85">
         <div class="grid-40">
           <h3><%= t('liked_it') %></h3>
           <a class="more" href="/about">
@@ -97,7 +97,7 @@
       </div>
     </div>
     <div class="pos-call-banner pos-prod">
-      <div class="push-15 grid-90">
+      <div class="push-15 grid-85">
         <div class="grid-40">
           <h3><%= t('liked_it') %></h3>
           <a class="more" href="/about">
