W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - added github icon

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -27,7 +27,7 @@
             </p>
             <div class="share-post">
               <p><%=t 'likeit_shareit' %></p>
-              <%= render :partial => '/layouts/followus' %>
+              <%= render :partial => '/layouts/followus', locals: {footer: false} %>
             </div>
           </div>
         </div>
