--- a/app/views/layouts/_followus.html.erb
+++ b/app/views/layouts/_followus.html.erb
@@ -14,4 +14,7 @@
 	<a target="_blank" href="<%= link_twitter %>"><li class="twitter"></li></a>
 	<a target="_blank" href="<%= link_facebook %>"><li class="facebook"></li></a>
 	<a target="_blank" href="<%= link_gplus %>"><li class="gplus"></li></a>
+	<% if footer %>
+		<a target="_blank" href="https://github.com/W3CBrasil"><li class="github"></li></a>
+	<% end %>
 </ul>
