--- a/app/views/pages/become_partner.html.erb
+++ b/app/views/pages/become_partner.html.erb
@@ -18,59 +18,72 @@
       <h1 class="title blackgrayfont grid-100"><%= t('become_partner_full_title') %></h1>
 
         <div class="grid-100">
-          <h3>Invitation to OD4D Platform</h3>
+          
+          <div class="grid-33">
+            <figure class="figure-partner"><img src="<%= asset_path 'card1.jpg' %>" width="200" alt="Share Knowledge"></figure>
+          </div>
+          <div class="grid-33">
+            <figure class="figure-partner"><img src="<%= asset_path 'card2.jpg' %>" width="200" alt="Linked Data"></figure>
+          </div>
+          <div class="grid-33">
+            <figure class="figure-partner"><img src="<%= asset_path 'card3.jpg' %>" width="200" alt="Linked Web"></figure>
+          </div>
 
-          <p>There are several ways to join the global effort to publish linked data and to join the initiative to build up the semantic web. The project Open Data Platform Development - OD4D is a worldwide forum for cooperation among the various actors in this ecosystem.</p>
-                    
-          <p><strong>Aims</strong></p>
-          <p>The platform serves as the link between the regional initiatives of linked data in Latin America, Africa, Asia and the Caribbean. She works as a virtual hub for OD4D Network, enabling access in English, Portuguese and Spanish in a simple, semantic and scalable environment. It was designed to be a reference in linked data systems, to enable learning on open data technologies, community exchange information and the production of semantic content. Its main objectives are:</p>
+          <div class="grid-100">
+            <h3>Invitation to OD4D Platform</h3>
 
-          <ul> 
-            <li>Gathering data on the web initiatives from both partner organizations and individuals, showing in detail the step by step of structuring linked data use cases;</li>
-            <li>Promoting the integration and dissemination of knowledge about linked data using native languages​​;</li>
-            <li>Promoting standards and specific vocabulary;</li>
-            <li>Being a reference of best practices for publishing and reuse of linked data;</li>
-            <li>Being, itself, a case of linked data by using W3C standards.</li>
-          </ul> 
+            <p>There are several ways to join the global effort to publish linked data and to join the initiative to build up the semantic web. The project Open Data Platform Development - OD4D is a worldwide forum for cooperation among the various actors in this ecosystem.</p>
+                      
+            <p><strong>Aims</strong></p>
+            <p>The platform serves as the link between the regional initiatives of linked data in Latin America, Africa, Asia and the Caribbean. She works as a virtual hub for OD4D Network, enabling access in English, Portuguese and Spanish in a simple, semantic and scalable environment. It was designed to be a reference in linked data systems, to enable learning on open data technologies, community exchange information and the production of semantic content. Its main objectives are:</p>
 
-          <p><strong>Why to connect</strong></p>
+            <ul> 
+              <li>Gathering data on the web initiatives from both partner organizations and individuals, showing in detail the step by step of structuring linked data use cases;</li>
+              <li>Promoting the integration and dissemination of knowledge about linked data using native languages​​;</li>
+              <li>Promoting standards and specific vocabulary;</li>
+              <li>Being a reference of best practices for publishing and reuse of linked data;</li>
+              <li>Being, itself, a case of linked data by using W3C standards.</li>
+            </ul> 
 
-          <p>The end result is an inspiring platform for new experiments to interconnect innovative networks and to feed the linked data value chain.</p>
-          <p>The platform is a space for managers, entrepreneurs, developers, researchers and enthusiasts. Your success depends on the participation of people like you.</p>
-          <p>In it, for example, managers of public and government policies can study and discuss alternative strategies for the development of technical skills in government agencies and regional observatories in order to implement linked data repositories, monitoring and assessment  of public policies.</p>
-          <p>Being a virtual hub with different players is made possible intense exchange of information and solutions between experts. Several use cases are being reported with extensive replication capacity. All these cases increase transparency and bring immense benefit to the population.</p>
-          <p>Also, private companies can benefit from the exchange of information about cutting-edge technologies. The deployment of the semantic web technologies can help increase the visibility and the value of their products on the network.</p>
-          <p>The platform allows research departments of private companies to promote their latest developments in the area of ​​semantic web. Not to mention the possibilities for future partnerships between professionals and institutions cooperating in the development of joint projects.</p>
-          <p>Still, researchers in universities have a fertile ground for the spread of papers, case studies and relevant outcomes of their research environment. The social intelligence in the platform provides a living knowledge base about linked data. New experiments and partner initiatives can be driven by the rich academic networking provided by the platform.</p>
-          <p>For developers and web designers, the environment drives the access to technical references and best practices in the adoption of open web standards as well as the search for and the publishing of tutorials and technical guides on deployment of semantic web. In addition, the platform bring together a hub of experts.</p>
-          <p>Civil society organizations, activists and enthusiasts of free software, open data and open web standards can use the platform promote events on topics of their aspirations. The OD4D platform promotes awareness and advocacy about the importance of open data, as well as being a thriving cradle for the design of new initiatives.</p>
+            <p><strong>Why to connect</strong></p>
 
-          <p><strong>How to connect</strong></p>
+            <p>The end result is an inspiring platform for new experiments to interconnect innovative networks and to feed the linked data value chain.</p>
+            <p>The platform is a space for managers, entrepreneurs, developers, researchers and enthusiasts. Your success depends on the participation of people like you.</p>
+            <p>In it, for example, managers of public and government policies can study and discuss alternative strategies for the development of technical skills in government agencies and regional observatories in order to implement linked data repositories, monitoring and assessment  of public policies.</p>
+            <p>Being a virtual hub with different players is made possible intense exchange of information and solutions between experts. Several use cases are being reported with extensive replication capacity. All these cases increase transparency and bring immense benefit to the population.</p>
+            <p>Also, private companies can benefit from the exchange of information about cutting-edge technologies. The deployment of the semantic web technologies can help increase the visibility and the value of their products on the network.</p>
+            <p>The platform allows research departments of private companies to promote their latest developments in the area of ​​semantic web. Not to mention the possibilities for future partnerships between professionals and institutions cooperating in the development of joint projects.</p>
+            <p>Still, researchers in universities have a fertile ground for the spread of papers, case studies and relevant outcomes of their research environment. The social intelligence in the platform provides a living knowledge base about linked data. New experiments and partner initiatives can be driven by the rich academic networking provided by the platform.</p>
+            <p>For developers and web designers, the environment drives the access to technical references and best practices in the adoption of open web standards as well as the search for and the publishing of tutorials and technical guides on deployment of semantic web. In addition, the platform bring together a hub of experts.</p>
+            <p>Civil society organizations, activists and enthusiasts of free software, open data and open web standards can use the platform promote events on topics of their aspirations. The OD4D platform promotes awareness and advocacy about the importance of open data, as well as being a thriving cradle for the design of new initiatives.</p>
 
-          <p>If you wish to become a partner and your organization website has an RSS feed, it is very simple to integrate your content automatically to the OD4D semantic data base platform.</p>
-          <p>Just provide the following metadata within your RSS feed:</p>
-           
-          <p><strong>Your organization RSS channel:</strong></p>
-          <ul> 
-            <li>title: channel title;</li>
-            <li>link: link to the content or website;</li>
-            <li>language: Content language parameter;</li>
-            <li>managingEditor: Content provider email;</li>
-            <li>category: channel category;</li>
-            <li>image:</li>
-          </ul>   
-          <p><strong>Post itens available within our RSS channel:</strong></p>
-          <ul> 
-            <li>title: Post title;</li>
-            <li>link: post link;</li>
-            <li>description: post description;</li>
-            <li>author: post author;</li>
-            <li>category: post category and subject;</li>
-            <li>enclosure: Associated media and attachments (Media Object);</li>
-            <li>pubDate: post date;</li>
-          </ul> 
-          <p>Therefore, it is a unique opportunity for you to join the OD4D platform to exchange knowledge on linked data and related topics. Your contribution and your knowledge within the OD4D platform will make difference for the improvement of techniques and technologies in linked data and related topics. And surely help make it participatory and inclusive process of public policy management in Latin America, Africa, Asia and the Caribbean, through an environment of transparency, openness and collaboration.</p>
-          <p>Please contact us via the email address <a href="mailto:od4d@nic.br">od4d@nic.br</a> and join this initiative!</p>
+            <p><strong>How to connect</strong></p>
+
+            <p>If you wish to become a partner and your organization website has an RSS feed, it is very simple to integrate your content automatically to the OD4D semantic data base platform.</p>
+            <p>Just provide the following metadata within your RSS feed:</p>
+             
+            <p><strong>Your organization RSS channel:</strong></p>
+            <ul> 
+              <li>title: channel title;</li>
+              <li>link: link to the content or website;</li>
+              <li>language: Content language parameter;</li>
+              <li>managingEditor: Content provider email;</li>
+              <li>category: channel category;</li>
+              <li>image:</li>
+            </ul>   
+            <p><strong>Post itens available within our RSS channel:</strong></p>
+            <ul> 
+              <li>title: Post title;</li>
+              <li>link: post link;</li>
+              <li>description: post description;</li>
+              <li>author: post author;</li>
+              <li>category: post category and subject;</li>
+              <li>enclosure: Associated media and attachments (Media Object);</li>
+              <li>pubDate: post date;</li>
+            </ul> 
+            <p>Therefore, it is a unique opportunity for you to join the OD4D platform to exchange knowledge on linked data and related topics. Your contribution and your knowledge within the OD4D platform will make difference for the improvement of techniques and technologies in linked data and related topics. And surely help make it participatory and inclusive process of public policy management in Latin America, Africa, Asia and the Caribbean, through an environment of transparency, openness and collaboration.</p>
+            <p>Please contact us via the email address <a href="mailto:od4d@nic.br">od4d@nic.br</a> and join this initiative!</p>
+          </div>
 
         </div>
     </div>
