W3CBrasil/OD4D#54 - tuning the CMS listing

--- a/app/views/casein/posts/_table.html.erb
+++ b/app/views/casein/posts/_table.html.erb
@@ -3,10 +3,11 @@
 <table class="table table-striped table-hover table-condensed">
 	<thead>
 		<tr>
+			<th><%= casein_sort_link "ID", :post_id %></th>
 			<th><%= casein_sort_link "Data", :pub_date %></th>
 			<th><%= casein_sort_link "Título", :title %></th>
 			<th><%= casein_sort_link "Autor", :author %></th>
-			<th><%= casein_sort_link "Conteúdo", :content %></th>
+			<th><%= casein_sort_link "ID Seção", :post_sections_id %></th>
 			<th><%= casein_sort_link "Assuntos", :about %></th>
 			<th>&nbsp;</th>
 		</tr>
@@ -14,10 +15,11 @@
 	
 	<% posts.each do |post| %>
 		<tr>
+			<td><%= casein_table_cell_link post.id, casein_post_path(post) %></td>
 			<td><%= casein_table_cell_link post.pub_date, casein_post_path(post) %></td>
 			<td><%= casein_table_cell_link post.title, casein_post_path(post) %></td>
 			<td><%= casein_table_cell_link post.author, casein_post_path(post) %></td>
-			<td><%= casein_table_cell_link post.content[0..499]+"...", casein_post_path(post) %></td>
+			<td><%= casein_table_cell_link post.post_sections_id, casein_post_path(post) %></td>
 			<td><%= casein_table_cell_link post.about, casein_post_path(post) %></td>
 			<td class="delete">
 				<%= link_to(casein_show_row_icon("trash"), casein_post_path(post), :method => :delete, :data => { :confirm => "Tem certeza que quer excluir este post?" }) %>
