--- a/app/views/casein/post_sections/_table.html.erb
+++ b/app/views/casein/post_sections/_table.html.erb
@@ -3,6 +3,7 @@
 <table class="table table-striped table-hover table-condensed">
 	<thead>
 		<tr>
+			<th><%= casein_sort_link "ID", :id %></th>
 			<th><%= casein_sort_link "Nome", :name %></th>
 			<th><%= casein_sort_link "Descrição", :description %></th>
 			<th>&nbsp;</th>
@@ -11,6 +12,7 @@
 	
 	<% post_sections.each do |post_section| %>
 		<tr>
+			<td><%= casein_table_cell_link post_section.id, casein_post_section_path(post_section) %></td>
 			<td><%= casein_table_cell_link post_section.name, casein_post_section_path(post_section) %></td>
 			<td><%= casein_table_cell_link post_section.description, casein_post_section_path(post_section) %></td>
 			<td class="delete">
