W3CBrasil/OD4D#54 - added beta disclaimer

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,7 @@
   <div class="grid-container">
     <h2 class="title blackfont txtcenter"><%= t('od4d_title') %></h2>
     <h4 class="subtitle txtcenter"><%= t('od4d_description') %></h4>
+    <h5 class="subtitle txtcenter"><%= raw(t('beta_disclaimer')) %></h5>
 
     <div id="call-banner" class="call-banner clearfix">
       <h5 class="call-title">
