--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,13 +33,22 @@
       </ul>
     </div>
     <div class="video-call-banner video-curioso">
-      <%= video_tag(['dadosabertos.webm'], id: 'vidcur', class: 'video', size: '550x300', controls: true)  %>
+      <%#= video_tag(['dadosabertos.webm'], id: 'vidcur', class: 'video', size: '550x300', controls: true)  %>
+      <div id="vidcur" class="video">
+        <iframe src="//player.vimeo.com/video/69632849" width="550" height="309" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
     </div>
    <div class="video-call-banner video-dev">
-      <%= video_tag(['dadosabertos.webm'], id: 'viddev', class: 'video', size: '550x300', controls: true)  %>
+      <%#= video_tag(['dadosabertos.webm'], id: 'viddev', class: 'video', size: '550x300', controls: true)  %>
+      <div id="viddev" class="video">
+        <iframe src="//player.vimeo.com/video/69632849" width="550" height="309" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
     </div>
     <div class="video-call-banner video-produtor">
-      <%= video_tag(['dadosabertos.webm'], id: 'vidprod', class: 'video', size: '550x300', controls: true)  %>
+      <%#= video_tag(['dadosabertos.webm'], id: 'vidprod', class: 'video', size: '550x300', controls: true)  %>
+      <div id="vidprod" class="video">
+        <iframe src="//player.vimeo.com/video/69632849" width="550" height="309" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
     </div>
     <div class="pos-call-banner bgdarkgreen pos-curioso">
       <div class="push-15 grid-85">
