fix terms and conditions - pairing w/ @alvarocavalcanti

--- a/app/views/pages/terms_and_conditions.html.erb
+++ b/app/views/pages/terms_and_conditions.html.erb
@@ -20,10 +20,10 @@
         <p>A User is someone who uses the Platform to read its content and/or contribute with original content.</p>
         <p>A Partner is someone who agrees to submit references to content through feeds in RSS format, to be adapted to the Linked Data format and stored in the Platform's software, provided the instructions for belonging to the network are followed.</p>
         <p>Belonging to the network means that Partners will connect through RSS Feeds to the Semantic Web, where the content is their absolute responsibility.</p>
-        <p>RSS <a href="#LC1">[LC1]</a> is a subset of XML "dialects" that serve to add content through feeds.</p>
-        <p>Feed <a href="#LC2">[LC2]</a> is a data format used in forms of communication where content is frequently updated.</p>
-        <p>Linked Data <a href="#LC3">[LC3]</a> is data provided by the semantic web, which is the Data Web - dates, titles; numbers, chemical properties, and any other conceivable data. RDF is the basis for publishing and linking data.</p>
-        <p>Tags <a href="#LC4">[LC4]</a> are markup language structures containing instructions with a start and end tag so that the browser can digitally process a page.</p>
+        <p><a target="_blank" href="http://en.wikipedia.org/wiki/RSS">RSS</a> is a subset of XML "dialects" that serve to add content through feeds.</p>
+        <p><a target="_blank" href="http://en.wikipedia.org/wiki/Web_feed">Feed</a> is a data format used in forms of communication where content is frequently updated.</p>
+        <p><a target="_blank" href="http://www.w3.org/standards/semanticweb">Linked Data</a> is data provided by the semantic web, which is the Data Web - dates, titles; numbers, chemical properties, and any other conceivable data. RDF is the basis for publishing and linking data.</p>
+        <p><a target="_blank" href="http://en.wikipedia.org/wiki/Tag_%28metadata%29">Tags</a> are markup language structures containing instructions with a start and end tag so that the browser can digitally process a page.</p>
         <p>1. Acceptance of the Terms of Use by Users and Partners</p>
         <p>1.1 To be able to freely use the content and services provided by the Platform in platform.od4d.org, Users and/or Partners must first carefully read and unequivocally and unconditionally agree with the Terms of Use, Privacy Policy and Specific Terms in the versions in which they are published on the Platform.</p>
         <p>1.2 Other notices and instructions published on platform.od4d.org should be viewed as complements to the Terms of Use, which the User must likewise fully comply with and respect.</p>
@@ -36,7 +36,7 @@
         <p>2. Access and Use of Services</p>
         <p>2.1 The Platform provides services to Users free of charge and on a royalty-free basis.</p>
         <p>2.2 No registration or identification of any kind is needed for consumption of content on the Platform.</p>
-        <p>2.3 Use of the direct publishing features on the Platform will require the registration and identification of the User, who agrees beforehand to provide his or her data through the privacy policy<a href="#LC5">[LC5]</a> .</p>
+        <p>2.3 Use of the direct publishing features on the Platform will require the registration and identification of the User, who agrees beforehand to provide his or her data through the <%= link_to "privacy policy", controller: "pages", action: "privacy_policy" %>.</p>
         <p>2.4 To access the direct publishing services on the Platform, the User, when completing the registration and identification forms, must provide information as part of the process. The User agrees and states that the information provided is true and correct, and it is his or her responsibility to keep this information updated on the Platform. Otherwise, the User will be liable for any false or incorrect statements that may cause harm or damage to the Platform or third parties.</p>
         <p>2.5 If the User is a minor, in order to access and/or use the Platform’s services, he or she must obtain permission from his or her parents, guardians or legal representative, who will assume full responsibility for any act committed by the minor, as well as the contents and services accessed and/or used by the latter.</p>
         <p>2.6 The User, through this Terms of Use, agrees and commits to use the services properly, for their permitted purposes only, in accordance with the provisions of this Terms of Use, Specific Terms for certain Services, other notices and instructions prepared by the Platform at www.od4d.org, and laws in effect.</p>
@@ -116,11 +116,6 @@
         <p>8.2 The Court of São Paulo, in the State of São Paulo, shall have exclusive jurisdiction to settle any matter or possible dispute arising from this General Terms and Conditions of Use, with the parties expressly waiving any other, however privileged it may be.</p>
         <p>Any person (User) or Partner who wishes to use the Platform must read and confirm that they have understood all the "General Terms and Conditions" and Privacy Policy that apply to use of the Platform. Acceptance through reading these "General Terms and Conditions" is absolutely essential for using the Platform.</p>
 
-        <p id="LC1"> [LC1] <a href="http://en.wikipedia.org/wiki/RSS">http://en.wikipedia.org/wiki/RSS</a></p>
-        <p id="LC2"> [LC2] <a href="http://en.wikipedia.org/wiki/Web_feed">http://en.wikipedia.org/wiki/Web_feed</a></p>
-        <p id="LC3"> [LC3] <a href="http://www.w3.org/standards/semanticweb">http://www.w3.org/standards/semanticweb</a></p>
-        <p id="LC4"> [LC4] <a href="http://en.wikipedia.org/wiki/Tag_%28metadata%29">http://en.wikipedia.org/wiki/Tag_%28metadata%29</a></p>
-        <p id="LC5"> [LC5] <%= link_to "Privacy policy", controller: "pages", action: "privacy_policy" %>.</p>
       </div>
     </div>
   </div>
